Moved the actions menu to the top of the screen in order to fix a bug where the menu wasn't displaying on safari. Some changes on the statistics page (Aman/Niklas). You can now use the browser back and fourth functionality properly (Jerker).

--- a/website/css/hashtux.css
+++ b/website/css/hashtux.css
@@ -143,14 +143,6 @@
     padding-top: 15px;
     padding-bottom: 15px;
     margin: 0;
-    display: none;
-}
-
-.bottombar {
-    padding-top: 15px;
-    margin: 0;
-    position: absolute;
-    bottom: 0;
     width: 100%;
     display: none;
 }
@@ -238,8 +230,6 @@
     border: 0;
     float: right;
     opacity: 0.5;
-    margin-top: 15px;
-    margin-bottom: 15px;
 }
 
 .freezebtn:focus {outline: none;}
@@ -256,7 +246,7 @@
 
 .itemfreezebtn:focus {outline: none;}
 
-.menubtntop {
+.menubtn {
     background: transparent;
     border: 0;
     position: absolute;
@@ -265,18 +255,13 @@
     padding: 0;
 }
 
-.menubtnbottom {
+.actionsbtn {
     background: transparent;
     border: 0;
     position: absolute;
-    bottom: 0;
+    top: 0;
     left: 0;
     padding: 0;
-    -webkit-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    transform: rotate(180deg);
 }
 
 .topbackdrop {
@@ -285,15 +270,6 @@
     width: 100%;
     position: absolute;
     top: 0;
-    display: none;
-}
-
-.bottombackdrop {
-    background: linear-gradient(to bottom,  rgba(0,0,0,0),rgba(0,0,0,0.5),rgba(0,0,0,1));
-    height: 10%;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
     display: none;
 }
 
@@ -350,6 +326,7 @@
 
 .timescroll {
     margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .timescrollvalue {
@@ -365,8 +342,8 @@
 }
 
 input[type=range] {
-  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
-  width: 100%; /* Specific width is required for Firefox. */
+  -webkit-appearance: none;
+  width: 100%;
 }
 
 input[type=range]::-webkit-slider-thumb {
@@ -374,18 +351,17 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 input[type=range]:focus {
-  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+  outline: none;
 }
 
 input[type=range]::-ms-track {
   width: 100%;
   cursor: pointer;
-  background: transparent; /* Hides the slider so custom styles can be added */
+  background: transparent;
   border-color: transparent;
   color: transparent;
 }
 
-/* Special styling for WebKit/Blink */
 input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   border: 1px solid #cccccc;
@@ -394,30 +370,28 @@ input[type=range]::-webkit-slider-thumb {
   border-radius: 100%;
   background: #3d3d3d;
   cursor: pointer;
-  margin-top: -11px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
-  box-shadow: 1px 1px 1px #000000, 0px 0px 0px #0d0d0d; /* Add cool effects to your sliders! */
+  margin-top: -11px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 0px #0d0d0d;
 }
 
-/* All the same stuff for Firefox */
 input[type=range]::-moz-range-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 36px;
-  width: 16px;
-  border-radius: 3px;
-  background: #ffffff;
+  border: 1px solid #cccccc;
+  height: 25px;
+  width: 25px;
+  border-radius: 100%;
+  background: #3d3d3d;
   cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 0px #0d0d0d;
 }
 
-/* All the same stuff for IE */
 input[type=range]::-ms-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 36px;
-  width: 16px;
-  border-radius: 3px;
-  background: #ffffff;
+  border: 1px solid #cccccc;
+  height: 25px;
+  width: 25px;
+  border-radius: 100%;
+  background: #3d3d3d;
   cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 0px #0d0d0d;
 }
 
 input[type=range]::-webkit-slider-runnable-track {
@@ -435,17 +409,16 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 
 input[type=range]::-moz-range-track {
   width: 100%;
-  height: 8.4px;
+  height: 5px;
   cursor: pointer;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #3071a9;
-  border-radius: 1.3px;
-  border: 0.2px solid #010101;
+  background: #cccccc;
+  border: 1px solid #ffffff;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 0px #0d0d0d;
 }
 
 input[type=range]::-ms-track {
   width: 100%;
-  height: 8.4px;
+  height: 5px;
   cursor: pointer;
   background: transparent;
   border-color: transparent;
@@ -453,20 +426,18 @@ input[type=range]::-ms-track {
   color: transparent;
 }
 input[type=range]::-ms-fill-lower {
-  background: #2a6495;
-  border: 0.2px solid #010101;
-  border-radius: 2.6px;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #cccccc;
+  border: 1px solid #ffffff;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 0px #0d0d0d;
 }
 input[type=range]:focus::-ms-fill-lower {
-  background: #3071a9;
+  background: #cccccc;
 }
 input[type=range]::-ms-fill-upper {
-  background: #3071a9;
-  border: 0.2px solid #010101;
-  border-radius: 2.6px;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #cccccc;
+  border: 1px solid #ffffff;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 0px #0d0d0d;
 }
 input[type=range]:focus::-ms-fill-upper {
-  background: #367ebd;
+  background: #cccccc;
 }
